# git-ws

./: .cookiecutter.json  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  git-ws.code-workspace  git-ws.sublime-project  pyproject.toml
.github/workflows/: main.yml
anyrepo/: __init__.py  __main__.py  _basemodel.py  _git.py  _url.py  _util.py  anyrepo.py  appconfig.py  clone.py  const.py  datamodel.py  exceptions.py  filters.py  git.py  iters.py  manifest.py  projectiter.py  types.py  workspace.py  workspacefinder.py
anyrepo/_cli/: __init__.py  common.py  config.py  info.py  manifest.py  options.py  util.py
anyrepo/cli/: __init__.py  manifest.py  util.py
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/api/: anyrepo.cli.rst  anyrepo.manifest.rst
docs/images/: workspace  workspace.drawio
docs/manual/: api.rst  command-line-interface.rst  dependency-resolution.rst  fileref.rst  group-filter.rst  manifest.rst  nomenclature.rst  shallow.rst  tagging.rst  use-case.rst  why.rst
docs/manual/command-line-interface/: application-configuration.rst  basics.rst  index.rst  manifest.rst  working-with-git-clones.rst  workspace-management.rst
docs/static/: cli.add.txt  cli.checkout.txt  cli.clone.txt  cli.commit.txt  cli.config.delete.txt  cli.config.files.txt  cli.config.get.txt  cli.config.list.txt  cli.config.set.txt  cli.config.txt  cli.create-manifest.txt  cli.default.txt  cli.deinit.txt  cli.dep.add.txt  cli.dep.delete.txt  cli.dep.list.txt  cli.dep.set.txt  cli.dep.txt  cli.dep.update.txt  cli.diff.txt  cli.fetch.txt  cli.foreach.txt  cli.git.txt  cli.group-filters.txt  cli.info.base-path.txt  cli.info.dep-tree.txt  cli.info.main-path.txt  cli.info.project-paths.txt  cli.info.txt  cli.info.workspace-path.txt  cli.init.txt  cli.manifest.convert.txt  cli.manifest.create.txt  cli.manifest.freeze.txt  cli.manifest.path.txt  cli.manifest.paths.txt  cli.manifest.resolve.txt  cli.manifest.txt  cli.manifest.upgrade.txt  cli.manifest.validate.txt  (+17 more)
gitws/: __init__.py  __main__.py  _basemodel.py  _deptree.py  _filerefupdater.py  _iters.py  _manifestformatmanager.py  _pathlock.py  _stringconverter.py  _url.py  _util.py  _workspacemanager.py  appconfig.py  clone.py  const.py  datamodel.py  deptree.py  exceptions.py  filters.py  git.py  gitws.py  gitwsmanifestformat.py  iters.py  manifestfinder.py  manifestformat.py  types.py  workspace.py  workspacefinder.py
gitws/_cli/: __init__.py  common.py  config.py  dep.py  info.py  logging.py  manifest.py  options.py  remote.py
gitws/_cli/dep/: __init__.py  update.py
src/gitws/: __init__.py  __main__.py  _basemodel.py  _deptree.py  _iters.py  _manifestformatmanager.py  _pathlock.py  _stringconverter.py  _url.py  _util.py  _workspacemanager.py  appconfig.py  clone.py  const.py  datamodel.py  exceptions.py  git.py  gitws.py  gitwsmanifestformat.py  manifestfinder.py  manifestformat.py  workspace.py  workspacefinder.py
src/gitws/_cli/: __init__.py  common.py  config.py  info.py  logging.py  manifest.py  options.py  remote.py
src/gitws/_cli/dep/: __init__.py  update.py
templates/: license-notice.txt
tests/: __init__.py  common.py  fixtures.py  test_api.py  test_appconfig.py  test_cli.py  test_cli_basic.py  test_cli_checkout.py  test_cli_clone.py  test_cli_config.py  test_cli_copyfile.py  test_cli_cornercases.py  test_cli_default.py  test_cli_dep.py  test_cli_groupfilters.py  test_cli_info.py  test_cli_init.py  test_cli_init_nomain.py  test_cli_linkfile.py  test_cli_manifest.py  test_cli_remote.py  test_cli_shallow.py  test_cli_status_add_commit.py  test_cli_submodule.py  test_cli_tag.py  test_cli_update.py  test_cli_workflow.py  test_clone.py  test_datamodel.py  test_filerefupdater.py  test_git.py  test_gitwsmanifestformat.py  test_init.py  test_init_manifest.py  test_init_nomain.py  test_iters.py  test_manifest.py  test_manifestformat.py  test_manifestformatmanager.py  test_non_recursive.py  (+6 more)
tests/refdata/tests.test_cli_cornercases/test_deptop/: logging.txt  stdout.txt
tests/refdata/tests.test_cli_submodule/test_update/: out.txt
tests/testdata/: example.yml
tests/testdata/appconfig/all/user/: config.toml
tests/testdata/appconfig/invalid_config/system/: config.toml
tests/testdata/appconfig/invalid_config/user/: config.toml
tests/testdata/appconfig/invalid_config/workspace/: config.toml
tests/testdata/appconfig/invalid_config_2/user/: config.toml
tests/testdata/appconfig/invalid_config_2/workspace/: config.toml
tests/testdata/appconfig/system-only/system/: config.toml
tests/testdata/appconfig/user-only/user/: config.toml
tests/testdata/cli_basic/foreach/: logging.txt
tests/testdata/cli_basic/git_no_color/: logging.txt
tests/testdata/cli_cornercases/deptop/: logging.txt  stderr.txt  stdout.txt
tests/testdata/cli_submodule/test_update/: out.txt
tests/testdata/workspace0/.anyrepo/: info.toml  info.yaml
tests/testdata/workspace0/.git-ws/: info.toml
